<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".connection.view.ConnectionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/big_margin">

        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:gravity="center"
            android:hint="@string/enter_username"/>

        <TextView
            android:text="@string/please_enter_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="10"
            android:textAppearance="@style/Base.TextAppearance.AppCompat"
            android:gravity="center"
            android:layout_marginBottom="@dimen/big_margin"/>

        <Button
            android:id="@+id/enter_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="20sp"
            android:text="@string/enter_text"/>
    </LinearLayout>

    <TextView
        android:id="@+id/error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wrong_username_length"
        android:gravity="center"
        android:textColor="@color/errorColor"
        android:layout_margin="@dimen/big_margin"
        android:layout_alignParentBottom="true"
        android:visibility="invisible"/>
</RelativeLayout>