<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/focus_workaround"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/big_margin">

            <EditText
                android:id="@+id/name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:gravity="center"
                android:nextFocusUp="@id/name_edittext"
                android:nextFocusLeft="@id/name_edittext"
                android:maxLines="1"
                android:maxLength="10"
                android:hint="@string/enter_username"/>

            <TextView
                android:text="@string/please_enter_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat"
                android:gravity="center"
                android:layout_marginBottom="@dimen/big_margin"/>

            <Button
                android:id="@+id/enter_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textSize="20sp"
                android:enabled="false"
                android:text="@string/enter_text"/>
        </LinearLayout>

        <TextView
            android:id="@+id/error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wrong_username_length"
            android:gravity="center"
            android:textColor="@color/errorColor"
            android:layout_margin="@dimen/big_margin"
            android:layout_alignParentBottom="true"
            android:visibility="gone"/>
    </RelativeLayout>
</ScrollView>