<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/next_page_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/next_page"
        android:textSize="@dimen/switch_button_main_text_size"/>

    <Button
        android:id="@+id/previous_page_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/previous_page"
        android:textSize="@dimen/switch_button_main_text_size"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/page_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/current_page"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/of_block"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="@dimen/switch_button_main_text_size"
            android:text="@string/zero"/>

        <TextView
            android:id="@+id/of_block"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            app:layout_constraintLeft_toRightOf="@id/current_page"
            app:layout_constraintRight_toLeftOf="@id/max_page"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="@dimen/switch_button_main_text_size"
            android:text="@string/of"/>

        <TextView
            android:id="@+id/max_page"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            app:layout_constraintLeft_toRightOf="@id/of_block"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="@dimen/switch_button_main_text_size"
            android:text="@string/zero"/>
    </android.support.constraint.ConstraintLayout>

</LinearLayout>